--- a/app/admin/media/css/style.css
+++ b/app/admin/media/css/style.css
@@ -1,3 +1,10 @@
+body {
+	font-size: 12px;
+}
+.dropdown-menu {
+	font-size: 13px
+}
+
 #login {
 	background-color: #ddd;
 	color: #fff
@@ -17,19 +24,15 @@
 		margin-top: 15px
 	}
 
-body {
-	font-size: 12px;
-	font-family: "Helvetica Neue", Helvetica, Arial, sans-serif
+.form-condensed .form-group {
+    margin-top: 0;
+    margin-bottom: 5px;
 }
 
 .panel-body .actions {
 	position: absolute;
 	right: 25px;
 	top: 10px
-}
-
-.dropdown-menu {
-	font-size: 12px
 }
 
 #invoice-list .glyphicon-ok {
