--- a/app/admin/template/administrative/invoice.twig
+++ b/app/admin/template/administrative/invoice.twig
@@ -276,7 +276,7 @@
 				<form method="post" action="/administrative/invoice?action=create_step1" class="form-horizontal" id="invoice-create-step1">
 
 					<div class="form-group">
-						<label class="col-xs-3">{% trans "Type" %}</label>
+						<label class="col-xs-3 control-label">{% trans "Type" %}</label>
 						<div class="col-xs-6">
 							<div class="btn-group" data-toggle="buttons">
 								<label class="btn btn-primary{% if env.session.invoice.type == 'D' %} active{% endif %}">
@@ -289,12 +289,13 @@
 					</div>
 
 					<div class="form-group">
-						<label class="col-xs-3">{% trans "Customer" %}</label>
-						<div class="col-xs-6">
+						<label class="col-xs-3 control-label">{% trans "Customer" %}</label>
+						<div class="col-xs-9">
 							<input type="text" id="autocomplete_customer" name="customer" class="form-control typeahead" value="{% if env.session.invoice.customer_id > 0 %}{{ env.session.invoice.customer.firstname }} {{ env.session.invoice.customer.lastname }}{% endif %}">
 							<input type="hidden" id="customer_id" name="customer_id" value="{% if env.session.invoice.customer_id > 0 %}{{ env.session.invoice.customer.id }}{% endif %}">
 						</div>
 					</div>
+
 					<div class="form-group">
 						<div class="col-xs-3 col-xs-offset-3">
 							<button class="btn btn-primary">
@@ -372,8 +373,6 @@
 				</form>
 			</div>
 		</div>
-
-
 
 		<script type="text/javascript">
 
@@ -528,8 +527,8 @@
 			<div class="panel-body">
 				<form method="post" action="/administrative/invoice" class="form-horizontal">
 					<div class="form-group">
-						<label class="col-xs-3">{% trans "Search" %}</label>
-						<div class="col-xs-6">
+						<label class="col-xs-3 control-label">{% trans "Search" %}</label>
+						<div class="col-xs-9">
 							<input type="text" name="search" class="form-control" value="{{ pager.get_search() }}">
 						</div>
 					</div>
@@ -565,10 +564,11 @@
 				<thead>
 					<tr>
 						<th width="10%">{{ pager.create_header('Number'|trans, 'number')|raw }}</th>
-						<th width="15%">{{ pager.create_header('Created'|trans, 'created')|raw }}</th>
-						<th width="35%">{{ pager.create_header('Customer'|trans, 'customer')|raw }}</th>
-						<th width="35%">{{ pager.create_header('Company'|trans, 'company')|raw }}</th>
-						<th width="20%" class="text-right">{{ pager.create_header('Amount'|trans, 'amount')|raw }}</th>
+						<th width="10%">{{ pager.create_header('Created'|trans, 'created')|raw }}</th>
+						<th width="20%">{{ pager.create_header('Customer'|trans, 'customer.lastname')|raw }}</th>
+						<th width="20%">{{ pager.create_header('Company'|trans, 'customer.company')|raw }}</th>
+						<th width="10%" class="text-right">{{ pager.create_header('Price incl'|trans, 'price_incl')|raw }}</th>
+						<th width="10%" class="text-right">{{ pager.create_header('Price excl'|trans, 'price_excl')|raw }}</th>
 						<th width="10%">{{ pager.create_header('Paid'|trans, 'paid')|raw }}</th>
 						<th style="width: 10%" colspan="3">&nbsp;</th>
 					</tr>
@@ -576,43 +576,44 @@
 				<tbody>
 			{% endif %}
 
-					<tr>
-						<td>
-							<a href="/administrative/invoice?action=edit&id={{ invoice.id }}" title="">
-								{{ invoice.number }}
-							</a>
-						</td>
-						<td>{{ invoice.created|date }}</td>
-						<td>
-							<a href="/administrative/customer?action=edit&id={{ invoice.customer.id }}" title="">
-								{{ invoice.customer.firstname }} {{ invoice.customer.lastname }}
-							</a>
-						</td>
-						<td>{{ invoice.customer.company }}</td>
-						<td class="text-right">€{{ invoice.get_price_incl()|number_format }}</td>
-						<td>
-						{% if invoice.paid %}
-							<span class="glyphicon glyphicon-ok"></span>
-						{% else %}
-							<span class="glyphicon glyphicon-remove"></span>
-						{% endif %}
-						</td>
-						<td>
-							<a href="/administrative/invoice?action=download&id={{ invoice.id }}">
-								<span class="glyphicon glyphicon-download"></span>
-							</a>
-						</td>
-						<td>
-							<a href="/administrative/invoice?action=send&id={{ invoice.id }}">
-								<span class="glyphicon glyphicon-envelope"></span>
-							</a>
-						</td>
-						<td class="text-right">
-							<a href="/administrative/invoice?action=edit&id={{ invoice.id }}" title="">
-								<span class="glyphicon glyphicon-pencil"></span>
-							</a>
-						</td>
-					</tr>
+			<tr>
+				<td>
+					<a href="/administrative/invoice?action=edit&id={{ invoice.id }}" title="">
+						{{ invoice.number }}
+					</a>
+				</td>
+				<td>{{ invoice.created|date }}</td>
+				<td>
+					<a href="/administrative/customer?action=edit&id={{ invoice.customer.id }}" title="">
+						{{ invoice.customer.firstname }} {{ invoice.customer.lastname }}
+					</a>
+				</td>
+				<td>{{ invoice.customer.company }}</td>
+				<td class="text-right">€{{ invoice.price_incl|number_format }}</td>
+				<td class="text-right">€{{ invoice.price_excl|number_format }}</td>
+				<td>
+				{% if invoice.paid %}
+					<span class="glyphicon glyphicon-ok"></span>
+				{% else %}
+					<span class="glyphicon glyphicon-remove"></span>
+				{% endif %}
+				</td>
+				<td>
+					<a href="/administrative/invoice?action=download&id={{ invoice.id }}">
+						<span class="glyphicon glyphicon-download"></span>
+					</a>
+				</td>
+				<td>
+					<a href="/administrative/invoice?action=send&id={{ invoice.id }}">
+						<span class="glyphicon glyphicon-envelope"></span>
+					</a>
+				</td>
+				<td class="text-right">
+					<a href="/administrative/invoice?action=edit&id={{ invoice.id }}" title="">
+						<span class="glyphicon glyphicon-pencil"></span>
+					</a>
+				</td>
+			</tr>
 
 			{% if loop.last %}
 				</tbody>
@@ -620,6 +621,8 @@
 
 				{{ pager.links|raw }}
 			{% endif %}
+			{% else %}
+				<div class="alert alert-info">{% trans "No invoices created" %}</div>
 			{% endfor %}
 			</div>
 		</div>
