--- a/app/admin/template/administrative/invoice/modal.manage_invoice_contact.twig
+++ b/app/admin/template/administrative/invoice/modal.manage_invoice_contact.twig
@@ -8,53 +8,53 @@
 		{% trans "Some fields were not filled in correctly" %}. {% trans "Please correct them" %}.
 	</div>
 
-	<form class="form-horizontal" method="post" id="invoice-contact-form" onsubmit="return validate_invoice_contact();">
+	<form class="form-horizontal form-condensed" method="post" id="invoice-contact-form" onsubmit="return validate_invoice_contact();">
 		<input type="hidden" name="invoice_contact[customer_id]" id="customer_id" value="">
 
 		<div class="form-group{% if 'company' in errors|keys %} has-error{% endif %}">
-			<label for="company" class="col-xs-3">{% trans "Company" %}</label>
+			<label for="company" class="control-label col-xs-3">{% trans "Company" %}</label>
 			<div class="col-xs-9">
 				<input type="text" name="invoice_contact[company]" id="company" class="form-control" value="">
 			</div>
 		</div>
 
 		<div class="form-group{% if 'firstname' in errors|keys %} has-error{% endif %}">
-			<label for="firstname" class="col-xs-3">{% trans "Firstname" %}</label>
+			<label for="firstname" class="control-label col-xs-3">{% trans "Firstname" %}</label>
 			<div class="col-xs-9">
 				<input type="text" name="invoice_contact[firstname]" id="firstname" class="form-control" value="">
 			</div>
 		</div>
 
 		<div class="form-group{% if 'lastname' in errors|keys %} has-error{% endif %}">
-			<label for="lastname" class="col-xs-3">{% trans "Lastname" %}</label>
+			<label for="lastname" class="control-label col-xs-3">{% trans "Lastname" %}</label>
 			<div class="col-xs-9">
 				<input type="text" name="invoice_contact[lastname]" id="lastname" class="form-control" value="">
 			</div>
 		</div>
 
 		<div class="form-group{% if 'street' in errors|keys %} has-error{% endif %}">
-			<label for="street" class="col-xs-3">{% trans "Street" %}</label>
+			<label for="street" class="control-label col-xs-3">{% trans "Street" %}</label>
 			<div class="col-xs-9">
 				<input type="text" name="invoice_contact[street]" id="street" class="form-control" value="">
 			</div>
 		</div>
 
 		<div class="form-group{% if 'housenumber' in errors|keys %} has-error{% endif %}">
-			<label for="housenumber" class="col-xs-3">{% trans "Housenumber" %}</label>
+			<label for="housenumber" class="control-label col-xs-3">{% trans "Housenumber" %}</label>
 			<div class="col-xs-9">
 				<input type="text" name="invoice_contact[housenumber]" id="housenumber" class="form-control" value="">
 			</div>
 		</div>
 
 		<div class="form-group{% if 'city' in errors|keys %} has-error{% endif %}">
-			<label for="city" class="col-xs-3">{% trans "City" %}</label>
+			<label for="city" class="control-label col-xs-3">{% trans "City" %}</label>
 			<div class="col-xs-9">
 				<input type="text" name="invoice_contact[city]" id="city" class="form-control" value="">
 			</div>
 		</div>
 
 		<div class="form-group{% if 'zipcode' in errors|keys %} has-error{% endif %}">
-			<label for="zipcode" class="col-xs-3">{% trans "Zip code" %}</label>
+			<label for="zipcode" class="control-label col-xs-3">{% trans "Zip code" %}</label>
 			<div class="col-xs-9">
 				<input type="text" name="invoice_contact[zipcode]" id="zipcode" class="form-control" value="">
 			</div>
@@ -62,49 +62,49 @@
 		</div>
 
 		<div class="form-group"{% if 'country_id' in errors|keys %} has-error{% endif %}">
-			<label for="country_id" class="col-xs-3">{% trans "Country" %}</label>
+			<label for="country_id" class="control-label col-xs-3">{% trans "Country" %}</label>
 			<div class="col-xs-9">
 				{{ form.select_country(countries, 'invoice_contact[country_id]', 'country_id', 0) }}
 			</div>
 		</div>
 
 		<div class="form-group{% if 'email' in errors|keys %} has-error{% endif %}">
-			<label for="email" class="col-xs-3">{% trans "Email" %}</label>
+			<label for="email" class="control-label col-xs-3">{% trans "Email" %}</label>
 			<div class="col-xs-9">
 				<input type="text" name="invoice_contact[email]" id="email" class="form-control" value="">
 			</div>
 		</div>
 
 		<div class="form-group{% if 'phone' in errors|keys %} has-error{% endif %}">
-			<label for="phone" class="col-xs-3">{% trans "Phone" %}</label>
+			<label for="phone" class="control-label col-xs-3">{% trans "Phone" %}</label>
 			<div class="col-xs-9">
 				<input type="text" name="invoice_contact[phone]" id="phone" class="form-control" value="">
 			</div>
 		</div>
 
 		<div class="form-group{% if 'mobile' in errors|keys %} has-error{% endif %}">
-			<label for="mobile" class="col-xs-3">{% trans "Mobile" %}</label>
+			<label for="mobile" class="control-label col-xs-3">{% trans "Mobile" %}</label>
 			<div class="col-xs-9">
 				<input type="text" name="invoice_contact[mobile]" id="mobile" class="form-control" value="">
 			</div>
 		</div>
 
 		<div class="form-group{% if 'fax' in errors|keys %} has-error{% endif %}">
-			<label for="fax" class="col-xs-3">{% trans "Fax" %}</label>
+			<label for="fax" class="control-label col-xs-3">{% trans "Fax" %}</label>
 			<div class="col-xs-9">
 				<input type="text" name="invoice_contact[fax]" id="fax" class="form-control" value="">
 			</div>
 		</div>
 
 		<div class="form-group{% if 'vat' in errors|keys %} has-error{% endif %}">
-			<label for="vat" class="col-xs-3">{% trans "Vat" %}</label>
+			<label for="vat" class="control-label col-xs-3">{% trans "Vat" %}</label>
 			<div class="col-xs-9">
 				<input type="text" name="invoice_contact[vat]" id="vat" class="form-control" value="">
 			</div>
 		</div>
 
 		<div class="form-group">
-			<label for="language_id" class="col-xs-3">{% trans "Language" %}</label>
+			<label for="language_id" class="control-label col-xs-3">{% trans "Language" %}</label>
 			<div class="col-xs-9">
 				{{ form.select_language(languages, 'invoice_contact[language_id]', 'language_id', 0) }}
 			</div>
