--- a/app/admin/template/setting/company.twig
+++ b/app/admin/template/setting/company.twig
@@ -8,10 +8,14 @@
 	</div>
 {% endif %}
 
+<form action="/setting/company" method="post" class="form-horizontal form-condensed">
 <div class="panel panel-default">
 	<div class="panel-heading">{% trans "Company Settings" %}</div>
 	<div class="panel-body">
-	<form action="/setting/company" method="post" class="form-horizontal form-condensed">
+		<div class="alert alert-info">
+			{% trans "Your company information is added to invoice documents." %} {% trans "Please fill them in correctly." %}
+		</div>
+
 		<div class="form-group">
 			<label class="control-label col-xs-3">{% trans "Name" %}</label>
 			<div class="col-xs-9">
@@ -116,8 +120,8 @@
 				<button type="submit" class="btn btn-primary">{% trans "Save" %}</button>
 			</div>
 		</div>
-	</form>
 	</div>
 </div>
+</form>
 
 {% endblock content %}
