--- a/app/admin/template/_default/layout.base.twig
+++ b/app/admin/template/_default/layout.base.twig
@@ -7,10 +7,12 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>Backoffice</title>
 
-	<link rel="stylesheet" href="/bootstrap.min.css" type="text/css" media="handheld, all">
+	<link rel="stylesheet" href="/bootstrap/dist/css/bootstrap.min.css" type="text/css" media="handheld, all">
 	<link rel="stylesheet" href="/style.css" type="text/css" media="handheld, all">
 
-	<script type="text/javascript" src="/jquery-1.11.2.min.js"></script>
+	<script type="text/javascript" src="/jquery/jquery.min.js"></script>
+	<script type="text/javascript" src="/bootstrap/dist/js/bootstrap.min.js"></script>
+		
 	{% spaceless %}
 		{% block head %}{% endblock head %}
 	{% endspaceless %}
@@ -19,7 +21,7 @@
 	{% include '_default/nav_bar.twig' %}
 	<div class="container">{% block content %}{% endblock content %}</div>
 
-	<script type="text/javascript" src="/bootstrap.min.js"></script>
+
 	<script type="text/javascript" src="/handlebars.js"></script>
 	{% spaceless %}
 		{% block javascript %}{% endblock %}
