--- a/app/admin/template/administrative/tag.twig
+++ b/app/admin/template/administrative/tag.twig
@@ -73,7 +73,7 @@
 		{% if loop.first %}
 		<div class="panel panel-default">
 			<div class="panel-heading">
-				{{ base.pager_count(pager.item_count) }}
+				{{ base.pager_count(pager) }}
 			</div>
 			<div class="panel-body">
 				<table class="table table-striped table-hover table-condensed">
