--- a/app/admin/template/_default/layout.base.twig
+++ b/app/admin/template/_default/layout.base.twig
@@ -1,3 +1,5 @@
+{% import '_default/macro/base.twig' as base %}
+
 <!doctype html>
 <html class="no-js" lang="{{ env.session.language.name_short }}">
 <head>
