--- a/app/admin/template/administrative/customer.twig
+++ b/app/admin/template/administrative/customer.twig
@@ -331,7 +331,7 @@
 						{% trans "Add customer" %}
 					</a>
 				</div>
-				{% trans "Customers" %}
+				{{ base.pager_count(pager) }}
 			</div>
 			<div class="panel-body">
 			{% for customer in pager.items %}
