--- a/app/admin/template/user.twig
+++ b/app/admin/template/user.twig
@@ -183,23 +183,23 @@
 						{% trans "Add user" %}
 					</a>
 				</div>
-				{% trans "Users" %}
+				{{ base.pager_count(pager) }}
 			</div>
 			<div class="panel-body">
 			{% for user in pager.items %}
-			{% if loop.first %}
-				<table class="table table-hover table-striped table-condensed table-responsive">
-				<thead>
-					<tr>
-						<th>#</th>
-						<th>{{ pager.create_header('First name'|trans, 'firstname')|raw }}</th>
-						<th>{{ pager.create_header('Last name'|trans, 'lastname')|raw }}</th>
-						<th>{{ pager.create_header('Username'|trans, 'username')|raw }}</th>
-						<th colspan="2">&nbsp;</th>
-					</tr>
-				</thead>
-				<tbody>
-			{% endif %}
+				{% if loop.first %}
+					<table class="table table-hover table-striped table-condensed table-responsive">
+					<thead>
+						<tr>
+							<th>#</th>
+							<th>{{ pager.create_header('First name'|trans, 'firstname')|raw }}</th>
+							<th>{{ pager.create_header('Last name'|trans, 'lastname')|raw }}</th>
+							<th>{{ pager.create_header('Username'|trans, 'username')|raw }}</th>
+							<th colspan="2">&nbsp;</th>
+						</tr>
+					</thead>
+					<tbody>
+				{% endif %}
 
 					<tr>
 						<td>{{ user.id }}</td>
@@ -220,10 +220,10 @@
 						</td>
 					</tr>
 
-			{% if loop.last %}
-				</tbody>
-				</table>
-			{% endif %}
+				{% if loop.last %}
+					</tbody>
+					</table>
+				{% endif %}
 			{% endfor %}
 			</div>
 		</div>
