--- a/app/admin/template/administrative/supplier.twig
+++ b/app/admin/template/administrative/supplier.twig
@@ -14,8 +14,12 @@
 		<div class="alert alert-danger">
 			{% trans "The form contains mistakes. Please correct them." %}
 		</div>
-		{% elseif env.session_sticky.message is defined %}
-			{{ base.display_flash_message(env.session_sticky.message, 'supplier') }}
+
+
+		{% elseif env.sticky_session.message == 'updated' %}
+			<div class="alert alert-success">
+				{% trans "The supplier details were updated." %}
+			</div>
 		{% endif %}
 
 		<form class="form form-horizontal" method="post" action="/administrative/supplier?action=edit&id={{ supplier.id }}">
@@ -30,6 +34,34 @@
 							{{ form.invalid_input('company', errors) }}
 						</div>
 					</div>
+
+					<div class="form-group">
+						<label class="col-xs-3 control-label">{% trans "Street" %}</label>
+						<div class="col-xs-9"><input type="text" name="supplier[street]" class="form-control" value="{{ supplier.street }}" /></div>
+					</div>
+
+					<div class="form-group">
+						<label class="col-xs-3 control-label">{% trans "Housenumber" %}</label>
+						<div class="col-xs-9"><input type="text" name="supplier[housenumber]" class="form-control" value="{{ supplier.housenumber }}"/></div>
+					</div>
+
+					<div class="form-group">
+						<label class="col-xs-3 control-label">{% trans "Zipcode" %}</label>
+						<div class="col-xs-9"><input type="text" name="supplier[zipcode]" class="form-control" value="{{ supplier.zipcode }}" /></div>
+					</div>
+
+					<div class="form-group">
+						<label class="col-xs-3 control-label">{% trans "City" %}</label>
+						<div class="col-xs-9"><input type="text" name="supplier[city]" class="form-control" value="{{ supplier.city }}" /></div>
+					</div>
+
+					<div class="form-group"{% if 'country_id' in errors|keys %} has-error{% endif %}">
+						<label for="country_id" class="col-xs-3 control-label">{% trans "Country" %}</label>
+						<div class="col-xs-9">
+							{{ form.select_country(countries, 'supplier[country_id]', 'country_id', supplier.country_id|default(203)) }}
+						</div>
+					</div>
+
 
 					<div class="form-group{% if 'vat' in errors|keys %} has-error{% endif %}">
 						<label for="vat" class="control-label col-xs-3">{% trans "Vat" %}</label>
@@ -76,6 +108,33 @@
 						<div class="col-xs-9">
 							<input type="text" name="supplier[company]" id="company" class="form-control" value="{{ env.post.supplier.company }}">
 							{{ form.invalid_input('company', errors) }}
+						</div>
+					</div>
+
+					<div class="form-group">
+						<label class="col-xs-3 control-label">{% trans "Street" %}</label>
+						<div class="col-xs-9"><input type="text" name="supplier[street]" class="form-control" /></div>
+					</div>
+
+					<div class="form-group">
+						<label class="col-xs-3 control-label">{% trans "Housenumber" %}</label>
+						<div class="col-xs-9"><input type="text" name="supplier[housenumber]" class="form-control" /></div>
+					</div>
+
+					<div class="form-group">
+						<label class="col-xs-3 control-label">{% trans "Zipcode" %}</label>
+						<div class="col-xs-9"><input type="text" name="supplier[zipcode]" class="form-control" /></div>
+					</div>
+
+					<div class="form-group">
+						<label class="col-xs-3 control-label">{% trans "City" %}</label>
+						<div class="col-xs-9"><input type="text" name="supplier[city]" class="form-control" /></div>
+					</div>
+
+					<div class="form-group"{% if 'country_id' in errors|keys %} has-error{% endif %}">
+						<label for="country_id" class="col-xs-3 control-label">{% trans "Country" %}</label>
+						<div class="col-xs-9">
+							{{ form.select_country(countries, 'supplier[country_id]', 'country_id', supplier.country_id|default(203)) }}
 						</div>
 					</div>
 
@@ -152,6 +211,8 @@
 					<tr>
 						<th>#</th>
 						<th>{{ pager.create_header('Company'|trans, 'company')|raw }}</th>
+						<th>{{ pager.create_header('City'|trans, 'city')|raw }}</th>
+						<th>{{ pager.create_header('Country'|trans, 'country.name')|raw }}</th>
 						<th>{{ pager.create_header('Vat'|trans, 'vat')|raw }}</th>
 						<th>&nbsp;</th>
 					</tr>
@@ -162,6 +223,8 @@
 					<tr>
 						<td>{{ supplier.id }}</td>
 						<td>{{ supplier.company }}</td>
+						<td>{{ supplier.city }}</td>
+						<td>{{ supplier.country.name }}</td>
 						<td>{{ supplier.vat }}</td>
 						<td>
 							<a href="/administrative/supplier?action=edit&id={{ supplier.id }}" title="">
