--- a/app/admin/template/login.twig
+++ b/app/admin/template/login.twig
@@ -8,10 +8,10 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
 
 	<link rel="shortcut icon" href="http://www.pixelwest.be/favicon.ico">
-	<link rel="stylesheet" href="/bootstrap.min.css" type="text/css" media="handheld, all">
+	<link rel="stylesheet" href="/bootstrap/dist/css/bootstrap.min.css" type="text/css" media="handheld, all">
 	<link rel="stylesheet" href="/style.css" type="text/css" media="handheld, all">
-	<script type="text/javascript" src="/jquery-1.11.2.min.js"></script>
-	<script type="text/javascript" src="/bootstrap.min.js"></script>
+	<script type="text/javascript" src="/jquery/jquery.min.js"></script>
+	<script type="text/javascript" src="/bootstrap/dist/js/bootstrap.min.js"></script>
 </head>
 <body id="login">
 
