--- a/app/admin/template/_default/modal.base.twig
+++ b/app/admin/template/_default/modal.base.twig
@@ -1,5 +1,5 @@
 <div class="modal fade" id="{{ id }}">
-	<div class="modal-dialog">
+	<div class="modal-dialog{% if modal_size is defined %} modal-{{ modal_size }}{% endif %}">
 		<div class="modal-content">
 			<div class="modal-header">
 				<button type="button" class="close" data-dismiss="modal" aria-hidden="true"></button>
