--- a/app/admin/template/administrative/document.twig
+++ b/app/admin/template/administrative/document.twig
@@ -17,74 +17,70 @@
 
 		<form class="form-horizontal" action="/administrative/document?action=edit&id={{ document.id }}" method="post">
 
-		<div class="row">
-			<div class="{% if document.preview_file_id > 0 %}col-xs-8{% else %}col-xs-12{% endif %}">
-				<div class="panel panel-default">
-					<div class="panel-heading">{% trans "Document details" %}</div>
-					<div class="panel-body">
+			<div class="row">
+				<div class="{% if document.preview_file_id > 0 %}col-xs-8{% else %}col-xs-12{% endif %}">
+					<div class="panel panel-default">
+						<div class="panel-heading">{% trans "Document details" %}</div>
+						<div class="panel-body">
 
-						<div class="form-group">
-							<label class="col-xs-3 control-label">{% trans "File" %}</label>
-							<div class="col-xs-9">
-								<p class="form-control-static">
-									<a href="/administrative/document?action=download&id={{ document.id }}">{{ document.file.name }}</a>
-									<a href="#replace_document" data-toggle="modal">
-										<span class="glyphicon glyphicon-refresh"></span>
-									</a>
-								</p>
+							<div class="form-group">
+								<label class="col-xs-3 control-label">{% trans "File" %}</label>
+								<div class="col-xs-9">
+									<p class="form-control-static">
+										<a href="/administrative/document?action=download&id={{ document.id }}">{{ document.file.name }}</a>
+										<a href="#replace_document" data-toggle="modal">
+											<span class="glyphicon glyphicon-refresh"></span>
+										</a>
+									</p>
+								</div>
 							</div>
-						</div>
 
-						<div class="form-group">
-							<label class="col-xs-3 control-label">{% trans "Date" %}</label>
-							<div class="col-xs-9">
-								<input type="date" class="form-control" name="document[created]" value="{{ document.created|date("d/m/Y") }}" data-date-startView="2"/>
+							<div class="form-group">
+								<label class="col-xs-3 control-label">{% trans "Date" %}</label>
+								<div class="col-xs-9">
+									<input type="text" class="form-control datepicker" name="document[created]" value="{{ document.created }}" />
+								</div>
 							</div>
-						</div>
 
-						<div class="form-group">
-							<label class="col-xs-3 control-label">{% trans "Title" %}</label>
-							<div class="col-xs-9">
-								<input type="text" class="form-control" name="document[title]" value="{{ document.title }}" />
+							<div class="form-group">
+								<label class="col-xs-3 control-label">{% trans "Title" %}</label>
+								<div class="col-xs-9">
+									<input type="text" class="form-control" name="document[title]" value="{{ document.title }}" />
+								</div>
 							</div>
-						</div>
 
-						<div class="form-group">
-							<label class="col-xs-3 control-label">{% trans "Description" %}</label>
-							<div class="col-xs-9">
-								<textarea class="form-control autogrow" name="document[description]">{{ document.description }}</textarea>
+							<div class="form-group">
+								<label class="col-xs-3 control-label">{% trans "Description" %}</label>
+								<div class="col-xs-9">
+									<textarea class="form-control autogrow" name="document[description]">{{ document.description }}</textarea>
+								</div>
 							</div>
-						</div>
 
-						<div class="form-group">
-							<div class="col-xs-9 col-xs-offset-3">
-								<button type="submit" class="btn btn-primary">{% trans "Save" %}</button>
-								<a href="/administrative/document?action=delete&id={{ document.id }}" class="btn btn-danger" data-confirm-title="{% trans "Please confirm" %}" data-confirm-message="{% trans "Are you sure" %}?" >{% trans "Delete" %}</a>
+							<div class="form-group">
+								<div class="col-xs-9 col-xs-offset-3">
+									<button type="submit" class="btn btn-primary">{% trans "Save" %}</button>
+									<a href="/administrative/document?action=delete&id={{ document.id }}" class="btn btn-danger" data-confirm-title="{% trans "Please confirm" %}" data-confirm-message="{% trans "Are you sure" %}?" >{% trans "Delete" %}</a>
+								</div>
 							</div>
 						</div>
 					</div>
 				</div>
-			</div>
 
-			{% if document.preview_file_id > 0 %}
-			<div class="col-xs-4">
-				<div class="panel panel-default">
-					<div class="panel-heading">{% trans "Preview" %}</div>
-					<div class="panel-body text-center">
-						<a href="/picture?id={{ document.preview_file_id }}" data-lightbox="{{ document.id }}">
-							<img src="/picture?id={{ document.preview_file_id }}&size=document_preview" class="imgzoom" />
-						</a>
-
-						<a href="/picture?id={{ document.preview_file_id }}">
-							{{ document.file.name }}
-						</a>
-
+				{% if document.preview_file_id > 0 %}
+				<div class="col-xs-4">
+					<div class="panel panel-default">
+						<div class="panel-heading">{% trans "Preview" %}</div>
+						<div class="panel-body text-center zoom">
+							<a href="/picture?id={{ document.preview_file_id }}">
+								<img src="/picture?id={{ document.preview_file_id }}&size=document_preview" />
+							</a>
+						</div>
 					</div>
 				</div>
-			</div>
-			{% endif %}
+				{% endif %}
 
-		</div>
+			</div>
+
 		</form>
 
 
@@ -100,7 +96,7 @@
 			<div class="panel-body">
 				{% for tag in tags %}
 					<div class="col-md-4">
-						<label><input type="checkbox" name="tag[{{ tag.id }}]" {% if tag.id in tag_ids %}checked{% endif %}> {{ tag.name }}</label>
+						<label><input type="checkbox" name="tag[]" value="{{ tag.id }}" {% if document.has_tag(tag) %}checked{% endif %}> {{ tag.name }}</label>
 					</div>
 				{% endfor %}
 
@@ -218,8 +214,8 @@
 			</div>
 		</div>
 
-		{% if env.session_sticky.message is defined %}
-			{{ base.display_flash_message(env.session_sticky.message, 'document') }}
+		{% if env.sticky_session.message is defined %}
+			{{ base.display_flash_message(env.sticky_session.message, 'document') }}
 		{% endif %}
 
 		<div class="panel panel-default">
@@ -242,7 +238,7 @@
 						<th>{{ pager.create_header('Created'|trans, 'created')|raw }}</th>
 						<th>{{ pager.create_header('Title'|trans, 'title')|raw }}</th>
 						<th>{% trans "Tags" %}</th>
-						<th colspan="2">&nbsp;</th>
+						<th colspan="3">&nbsp;</th>
 					</tr>
 				</thead>
 				<tbody>
@@ -263,6 +259,13 @@
 								<span class="glyphicon glyphicon-trash"></span>
 							</a>
 						</td>
+						<td>
+							{% if not document.is_purchase() %}
+								<a href="/administrative/purchase?action=add&document_id={{ document.id }}" title="">
+									<span class="glyphicon glyphicon-pushpin"></span>
+								</a>
+							{% endif %}
+						</td>
 					</tr>
 
 			{% if loop.last %}
@@ -282,7 +285,8 @@
 {% block javascript %}
 
 	{% if action == 'add' %}
-		<script type="text/javascript" src="/dropzone.js"></script>
+		<script type="text/javascript" src="/dropzone/dist/dropzone.js"></script>
+		<script type="text/javascript" src="/handlebars/handlebars.min.js"></script>
 		<script type="text/x-handlebars-template" id="document-file-template">
 			<div class="file">
 				<input type="hidden" name="document[file_id]" value="((file.id))" />
