--- a/app/admin/template/administrative/invoice.twig
+++ b/app/admin/template/administrative/invoice.twig
@@ -10,6 +10,10 @@
 			<li class="active">{% trans "Details" %}</li>
 		</ol>
 
+		{% if env.sticky_session.message is defined %}
+			{{ base.display_flash_message(env.sticky_session.message, 'invoice') }}
+		{% endif %}
+
 		<div class="panel panel-default">
 			<div class="panel-heading">{% trans "Details" %}</div>
 			<div class="panel-body">
@@ -27,7 +31,7 @@
 					<dd>{{ "€%.2f"|format(invoice.get_price_incl()) }}</dd>
 
 					<dt>{% trans "Paid" %}</dt>
-					<dd>{% if invoice.paid %}{% trans "Yes" %}{% else %}{% trans "No" %}{% endif %}</dd>
+					<dd>{% if invoice.paid %}<span class="glyphicon glyphicon-ok"></span> {% trans "Yes" %}{% else %}<span class="glyphicon glyphicon-remove"></span> {% trans "No" %}{% endif %}</dd>
 
 					<dt>{% trans "Reference" %}</dt>
 					<dd>{{ invoice.reference }}</dd>
@@ -37,12 +41,6 @@
 						<a href="/administrative/invoice?action=download&id={{ invoice.id }}">{% trans "Download" %}</a>
 					</dd>
 				</dl>
-
-				<div class="col-xs-12 text-right">
-					<a href="/administrative/invoice?action=delete&id={{ invoice.id }}" class="btn btn-danger" data-confirm-message="{% trans "Are you really sure" %}?" data-confirm-title="{% trans "Please confirm" %}">
-						{% trans "Delete Invoice" %}
-					</a>
-				</div>
 			</div>
 		</div>
 
@@ -77,7 +75,7 @@
 
 			<div class="col-md-6">
 				<div class="panel panel-default">
-					<div class="panel-heading">{% trans "Invoice Contact" %}</div>
+					<div class="panel-heading">{% trans "Invoice contact" %}</div>
 					<div class="panel-body">
 						<dl class="dl-horizontal">
 							<dt>{% trans "Name" %}</dt>
@@ -104,7 +102,7 @@
 		</div>
 
 		<div class="panel panel-default">
-			<div class="panel-heading">{% trans "Invoice Details" %}</div>
+			<div class="panel-heading">{% trans "Invoice details" %}</div>
 			<div class="panel-body">
 				<table class="table table-striped table-hover table-condensed">
 					<thead>
@@ -168,7 +166,7 @@
 				{% endif %}
 				<tr>
 					<td>{{ transfer.created|datetime }}</td>
-					<td>&euro;{{ transfer.amount }}</td>
+					<td>&euro;{{ transfer.amount|number_format }}</td>
 				</tr>
 				{% if loop.last %}
 					</tbody>
@@ -182,7 +180,7 @@
 
 		<form class="form-horizontal" action="/administrative/invoice?action=edit&id={{ invoice.id }}" method="post">
 		<div class="panel panel-default">
-			<div class="panel-heading">{% trans "Invoice Settings" %}</div>
+			<div class="panel-heading">{% trans "Invoice settings" %}</div>
 			<div class="panel-body">
 				<div class="form-group">
 					<label class="control-label col-md-3">{% trans "Send reminder mails" %}</label>
@@ -224,7 +222,7 @@
 						{% trans "Manual payment added" %}
 						{% endif %}
 
-						{{ "€%.2f"|format(transfer.amount) }}
+						&euro;{{ transfer.amount|number_format }}
 					</dd>
 
 				{% else %}
@@ -274,24 +272,10 @@
 			</div>
 			<div class="panel-body">
 				<form method="post" action="/administrative/invoice?action=create_step1" class="form-horizontal" id="invoice-create-step1">
-
-					<div class="form-group">
-						<label class="col-xs-3 control-label">{% trans "Type" %}</label>
-						<div class="col-xs-6">
-							<div class="btn-group" data-toggle="buttons">
-								<label class="btn btn-primary{% if env.session.invoice.type == 'D' %} active{% endif %}">
-								<input type="radio" name="type" id="type_d" value="D"{% if env.session.invoice.type == 'D' %} checked{% endif %}>{% trans "Invoice" %}</label>
-
-								<label class="btn btn-primary{% if env.session.invoice.type == 'C' %} active{% endif %}">
-								<input type="radio" name="type" id="type_c" value="C"{% if env.session.invoice.type == 'C' %} checked{% endif %}>{% trans "Credit note" %}</label>
-							</div>
-						</div>
-					</div>
-
 					<div class="form-group">
 						<label class="col-xs-3 control-label">{% trans "Customer" %}</label>
 						<div class="col-xs-9">
-							<input type="text" id="autocomplete_customer" name="customer" class="form-control typeahead" value="{% if env.session.invoice.customer_id > 0 %}{{ env.session.invoice.customer.firstname }} {{ env.session.invoice.customer.lastname }}{% endif %}">
+							<input type="text" id="autocomplete_customer" name="customer" class="form-control typeahead" value="{% if env.session.invoice.customer_id > 0 %}{{ env.session.invoice.customer.firstname }} {{ env.session.invoice.customer.lastname }}{% endif %}" placeholder="{% trans "Search customer" %}...">
 							<input type="hidden" id="customer_id" name="customer_id" value="{% if env.session.invoice.customer_id > 0 %}{{ env.session.invoice.customer.id }}{% endif %}">
 						</div>
 					</div>
@@ -418,13 +402,26 @@
 		</div>
 		{% endif %}
 
-		<div class="panel panel-default">
-			<div class="panel-heading">
-				{% trans "Add items" %}
+		<form method="post" action="/administrative/invoice?action=create_step3">
+			<div class="panel panel-default">
+				<div class="panel-heading">
+					{% trans "Additional info" %}
+				</div>
+				<div class="panel-body">
+					<div class="form-group">
+						<label class="col-xs-3 control-label">{% trans "Reference" %}</label>
+						<div class="col-xs-9">
+							<input type="text" class="form-control" id="reference" name="invoice[reference]" value="{{ env.session.invoice.reference }}">
+						</div>
+					</div>
+				</div>
 			</div>
-			<div class="panel-body">
 
-				<form method="post" action="/administrative/invoice?action=create_step3">
+			<div class="panel panel-default">
+				<div class="panel-heading">
+					{% trans "Add items" %}
+				</div>
+				<div class="panel-body">
 					<table class="table table-hover table-striped table-condensed">
 						<thead>
 							<tr>
@@ -442,14 +439,17 @@
 						<button type="button" onclick="javascript:add_item({})" class="btn btn-default">
 							<span class="glyphicon glyphicon-plus"></span> {% trans "Add item" %}
 						</button>
-						<button type="submit" class="btn btn-primary">
-							{% trans "Save" %} <span class="glyphicon glyphicon-arrow-right"></span>
-						</button>
 					</div>
-				</form>
-
+				</div>
 			</div>
-		</div>
+
+			<div class="text-right">
+				<button type="submit" class="btn btn-primary">
+					{% trans "Save" %} <span class="glyphicon glyphicon-arrow-right"></span>
+				</button>
+			</div>
+		</form>
+
 
 		<script type="text/x-handlebars-template" id="new-invoice-item-tmpl">
 			<tr>
@@ -543,8 +543,8 @@
 			</div>
 		</div>
 
-		{% if env.session_sticky.message is defined %}
-			{{ base.display_flash_message(env.session_sticky.message, 'invoice') }}
+		{% if env.sticky_session.message is defined %}
+			{{ base.display_flash_message(env.sticky_session.message, 'invoice') }}
 		{% endif %}
 
 		<div class="panel panel-default">
@@ -555,7 +555,7 @@
 						{% trans "Add invoice" %}
 					</a>
 				</div>
-				{% trans "Invoices" %}
+				{{ base.pager_count(pager.item_count) }}
 			</div>
 			<div class="panel-body">
 			{% for invoice in pager.items %}
@@ -636,6 +636,7 @@
 	{% if action == 'create_step1' %}
 		<script type="text/javascript" src="/bloodhound.min.js"></script>
 		<script type="text/javascript" src="/typeahead.min.js"></script>
+		<script type="text/javascript" src="/handlebars/handlebars.js"></script>
 		<script type="text/javascript">
 
 			var customers = new Bloodhound({
@@ -659,6 +660,8 @@
 				$('#customer_id').val(data.id);
 			});
 		</script>
+	{% elseif action == 'create_step3' %}
+		<script type="text/javascript" src="/handlebars/handlebars.js"></script>
 	{% endif %}
 
 {% endblock javascript %}
