--- a/app/admin/template/administrative/purchase.twig
+++ b/app/admin/template/administrative/purchase.twig
@@ -33,25 +33,102 @@
 
 		<ol class="breadcrumb">
 			<li><a href="/">{% trans "Home" %}</a></li>
-			<li><a href="/administrative/purchase">{% trans "Purchases" %}</a></li>
-			<li class="active">{% trans "Add purchase" %}</li>
+			<li><a href="/administrative/purchase" title="">{% trans "Purchases" %}</a></li>
+			<li class="active">{% trans "Create purchase" %}</li>
 		</ol>
 
 		{% if errors is defined %}
-		<div class="alert alert-danger">
-			{% trans "The form contains mistakes. Please correct them." %}
-		</div>
+			<div class="alert alert-danger">
+				{% trans "The form contains errors. Please correct them." %}
+			</div>
 		{% endif %}
 
-		<form class="form" method="post" action="/administrative/purchase?action=add">
+		{% include 'administrative/purchase/modal.document.twig' with {id: 'select-document', modal_size: "lg"} %}
 
-			<div class="form-group">
-				<button class="btn btn-primary">
-					{% trans "Save" %}
-				</button>
+		<div class="panel panel-default">
+			<div class="panel-heading">
+				{% trans "Details" %}
 			</div>
-		</form>
+			<div class="panel-body">
+				<form method="post" action="/administrative/purchase?action=add" class="form-horizontal">
+					<div class="form-group{% if 'supplier_id' in errors|keys %} has-error{% endif %}">
+						<label class="col-xs-3 control-label">{% trans "Supplier" %}</label>
+						<div class="col-xs-9">
+							<input type="text" id="autocomplete_supplier" name="supplier" class="form-control typeahead" value="{% if purchase is defined and purchase.supplier_id > 0 %}{{ purchase.supplier.company }}{% endif %}" placeholder="{% trans "Search supplier" %}...">
+							<input type="hidden" id="supplier_id" name="purchase[supplier_id]" value="{% if purchase is defined and purchase.supplier_id > 0 %}{{ purchase.supplier_id }}{% endif %}">
+							{{ form.invalid_input('supplier_id', errors) }}
+						</div>
+					</div>
 
+					<div class="form-group{% if 'document_id' in errors|keys %} has-error{% endif %}">
+						<label class="col-xs-3 control-label">
+							{% trans "Document" %}
+							<a href="#select-document" data-toggle="modal">
+								<span class="glyphicon glyphicon-pushpin"></span>
+							</a>
+						</label>
+						<div class="col-xs-9">
+							<p class="form-control-static">
+								<span id="document_title">
+									{% if purchase is defined and purchase.document_id > 0 %}
+										{{ purchase.document.title }}
+									{% else %}
+										<em>&lt; {% trans "none selected" %} &gt;</em>
+									{% endif %}
+								</span>
+							</p>
+							<input type="hidden" name="purchase[document_id]" value="{{ purchase.document_id }}">
+							{{ form.invalid_input('document_id', errors) }}
+						</div>
+					</div>
+
+					<div class="form-group{% if 'price_excl' in errors|keys %} has-error{% endif %}">
+						<label class="col-xs-3 control-label">{% trans "Price (excl)" %}</label>
+						<div class="col-xs-5">
+							<div class="input-group">
+								<span class="input-group-addon">&euro;</span>
+								<input type="text" class="form-control" name="purchase[price_excl]" value="{{ purchase.price_excl }}">
+							</div>
+							{{ form.invalid_input('price_excl', errors) }}
+						</div>
+					</div>
+
+					<div class="form-group{% if 'price_incl' in errors|keys %} has-error{% endif %}">
+						<label class="col-xs-3 control-label">{% trans "Price (incl)" %}</label>
+						<div class="col-xs-5">
+							<div class="input-group">
+								<span class="input-group-addon">&euro;</span>
+								<input type="text" class="form-control" name="purchase[price_incl]" value="{{ purchase.price_incl }}">
+							</div>
+							{{ form.invalid_input('price_incl', errors) }}
+						</div>
+					</div>
+
+					<div class="form-group{% if 'expiration_date' in errors|keys %} has-error{% endif %}">
+						<label class="col-xs-3 control-label">{% trans "Expiration date" %}</label>
+						<div class="col-xs-5">
+							<input type="text" class="form-control datepicker" name="purchase[expiration_date]" value="{{ purchase.expiration_date }}">
+							{{ form.invalid_input('expiration_date', errors) }}
+						</div>
+					</div>
+
+					<div class="form-group">
+						<label class="col-xs-3 control-label">{% trans "Paid date" %}</label>
+						<div class="col-xs-5">
+							<input type="text" class="form-control datepicker" name="purchase[paid]" value="{{ purchase.paid }}">
+						</div>
+					</div>
+
+					<div class="form-group">
+						<div class="col-xs-3 col-xs-offset-3">
+							<button class="btn btn-primary">
+								{% trans "Save" %}
+							</button>
+						</div>
+					</div>
+				</form>
+			</div>
+		</div>
 
 	{% else %}
 
@@ -83,13 +160,19 @@
 			</div>
 		</div>
 
-		{% if env.session_sticky.message is defined %}
-			{{ base.display_flash_message(env.session_sticky.message, 'purchase') }}
+		{% if env.sticky_session.message is defined %}
+			{{ base.display_flash_message(env.sticky_session.message, 'purchase') }}
 		{% endif %}
 
 		<div class="panel panel-default">
 			<div class="panel-heading">
-				{% trans "Purchases" %}
+				<div class="pull-right">
+					<a href="/administrative/purchase?action=add" title="">
+						<span class="glyphicon glyphicon-plus-sign"></span>
+						{% trans "Add purchase" %}
+					</a>
+				</div>
+				{{ base.pager_count(pager.item_count) }}
 			</div>
 			<div class="panel-body">
 			{% for purchase in pager.items %}
@@ -97,10 +180,10 @@
 				<table class="table table-hover table-striped table-condensed table-responsive" id="purchase-list">
 				<thead>
 					<tr>
-						<th width="10%">{{ pager.create_header('Number'|trans, 'number')|raw }}</th>
-						<th width="15%">{{ pager.create_header('Date'|trans, 'date')|raw }}</th>
-						<th width="35%">{{ pager.create_header('Supplier'|trans, 'supplier')|raw }}</th>
-						<th width="20%" class="text-right">{{ pager.create_header('Amount'|trans, 'amount')|raw }}</th>
+						<th width="10%">{{ pager.create_header('Number'|trans, 'id')|raw }}</th>
+						<th width="15%">{{ pager.create_header('Expiration date'|trans, 'expiration_date')|raw }}</th>
+						<th width="35%">{{ pager.create_header('Supplier'|trans, 'supplier.company')|raw }}</th>
+						<th width="20%" class="text-right">{{ pager.create_header('Price incl'|trans, 'price_incl')|raw }}</th>
 						<th width="10%">{{ pager.create_header('Paid'|trans, 'paid')|raw }}</th>
 						<th style="width: 10%" colspan="3">&nbsp;</th>
 					</tr>
@@ -109,13 +192,13 @@
 			{% endif %}
 
 				<tr>
-					<td>{{ purchase.number }}</td>
-					<td>{{ purchase.date|date }}</td>
-					<td>{{ purchase.customer.company }}</td>
+					<td>{{ purchase.id }}</td>
+					<td>{{ purchase.expiratione_date|date }}</td>
+					<td>{{ purchase.supplier.company }}</td>
 					<td class="text-right">€{{ purchase.price_incl|number_format }}</td>
 					<td>
-					{% if purchase.paid %}
-						<span class="glyphicon glyphicon-ok"></span>
+					{% if not purchase.paid is empty %}
+						<span class="glyphicon glyphicon-ok" title="{{ purchase.paid|datetime }}"></span>
 					{% else %}
 						<span class="glyphicon glyphicon-remove"></span>
 					{% endif %}
@@ -130,6 +213,11 @@
 							<span class="glyphicon glyphicon-pencil"></span>
 						</a>
 					</td>
+					<td>
+						<a href="/administrative/purchase?action=delete&id={{ purchase.id }}" data-confirm-title="{% trans "Please confirm" %}" data-confirm-message="{% trans "Are you sure you want to delete this purchase?" %}">
+							<span class="glyphicon glyphicon-trash"></span>
+						</a>
+					</td>
 				</tr>
 
 			{% if loop.last %}
@@ -138,6 +226,11 @@
 
 				{{ pager.links|raw }}
 			{% endif %}
+
+			{% else %}
+
+				<p><em>{% trans "No purchases found." %}</em></p>
+
 			{% endfor %}
 			</div>
 		</div>
@@ -145,3 +238,115 @@
 	{% endif %}
 
 {% endblock content %}
+
+{% block javascript %}
+
+	<script type="text/javascript" src="/bloodhound.min.js"></script>
+	<script type="text/javascript" src="/typeahead.min.js"></script>
+	<script type="text/javascript">
+
+		var suppliers = new Bloodhound({
+			datumTokenizer: Bloodhound.tokenizers.obj.whitespace('value'),
+			queryTokenizer: Bloodhound.tokenizers.whitespace,
+			remote: '/administrative/supplier?action=ajax_search&search=%QUERY'
+		});
+
+		suppliers.initialize();
+
+		$('#autocomplete_supplier').typeahead({
+			hint: true,
+			highlight: true,
+			minLength: 2
+		},{
+			name:	'supplier',
+			displayKey: 'value',
+			source:	suppliers.ttAdapter()
+		});
+		$('#autocomplete_supplier').on('typeahead:selected typeahead:autocompleted', function(e,data) {
+			$('#supplier_id').val(data.id);
+		});
+	</script>
+
+	{#
+
+		<script type="text/javascript" src="/bootstrap-tokenfield.min.js"></script>
+		<script type="text/javascript" src="/bloodhound.min.js"></script>
+		<script type="text/javascript" src="/typeahead.min.js"></script>
+		<script type="text/javascript">
+
+			var tags = new Bloodhound({
+				datumTokenizer: Bloodhound.tokenizers.obj.whitespace('value'),
+				queryTokenizer: Bloodhound.tokenizers.whitespace,
+				remote: '/administrative/tag?action=ajax_search&search=%QUERY'
+			});
+
+			tags.initialize();
+
+			$('#autocomplete-tag').tokenfield({
+				typeahead: [null, { source: tags.ttAdapter(), displayKey: 'label', beautify: false }]
+			});
+
+			/*var tags = new Bloodhound({
+				datumTokenizer: Bloodhound.tokenizers.obj.whitespace('value'),
+				queryTokenizer: Bloodhound.tokenizers.whitespace,
+				remote: '/administrative/tag?action=ajax_search&search=%QUERY'
+			});
+
+			tags.initialize();
+
+			$('#autocomplete_tag').typeahead({
+				hint: true,
+				highlight: true,
+				minLength: 2
+			},{
+				name:	'tag',
+				displayKey: 'value',
+				source:	tags.ttAdapter()
+			});
+			$('#autocomplete_tag').on('typeahead:selected typeahead:autocompleted', function(e,data) {
+				var source = $("#tag-template").html();
+				Handlebars.setDelimiter('(',')');
+				var template = Handlebars.compile(source);
+				var response = {
+					id: data.id,
+					name: data.value
+				};
+				$('#tags ul').append( template(response) );
+				$('#tag-filter-form input').val('');
+			});
+
+			$('#autocomplete-tag').on('blur', function() {
+				$(this).typeahead('val', '');
+			});
+
+			function toggle_input_tag() {
+				$('#autocomplete-tag').val('');
+				if($('#tag-filter-form').hasClass('hide')) {
+					$('#tag-filter-form').removeClass('hide');
+				} else {
+					$('#tag-filter-form').addClass('hide');
+				}
+				$('#autocomplete-tag').focus();
+			}*/
+
+		</script>
+		<script type="text/javascript" src="/handlebars/handlebars.min.js"></script>
+		<script id="tag-template" type="text/x-handlebars-template">
+			<li data-tag-id="((id))">
+				((name))
+				<input type="hidden" name="tags[]" value="((id))">
+				<a href="javascript:void(0);" title="{% trans "Delete tag" %}"><span class="glyphicon glyphicon-remove"></span></a>
+			</li>
+		</script>
+
+	#}
+
+{% endblock javascript %}
+
+{% block head %}
+
+	<link rel="stylesheet" type="text/css" href="/typeahead.css">
+	<link rel="stylesheet" type="text/css" href="/typeahead.css">
+	<link rel="stylesheet" type="text/css" href="/bootstrap-tokenfield.min.css">
+
+{% endblock head %}
